samples/_failures_safe/1761647050_a9dc4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e34d0ef5.c: In function ‘main’:
./samples/SAFE/__tmp_e34d0ef5.c:178:9: error: expected declaration or statement at end of input
  178 |         if (token.type == TOKEN_INVALID) {
      |         ^~
./samples/SAFE/__tmp_e34d0ef5.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e34d0ef5.c:178:9: error: expected declaration or statement at end of input
